--- a/ProcessManager/package.json
+++ b/ProcessManager/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run ProcessManager:serve-ssr",
+    "serve:ssr": "node dist/ProcessManager/server/main.js",
+    "build:ssr": "ng build && ng run ProcessManager:server",
+    "prerender": "ng run ProcessManager:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,10 +21,13 @@
     "@angular/forms": "^16.1.0",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
+    "@angular/platform-server": "^16.1.5",
     "@angular/router": "^16.1.0",
     "@ngrx/effects": "^16.1.0",
     "@ngrx/store": "^16.1.0",
+    "@nguniversal/express-engine": "^16.1.1",
     "bootstrap": "^5.3.0",
+    "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "s": "^1.0.0",
     "tslib": "^2.3.0",
@@ -30,7 +37,10 @@
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@nguniversal/builders": "^16.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
